--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -67,7 +67,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: fit-content;
+        height: 10rem;
     }
 
     .header-serch_container{
