--- a/client/src/Components/SideBar/SideBar.css
+++ b/client/src/Components/SideBar/SideBar.css
@@ -3,13 +3,17 @@
     width: 19rem;
     display: flex;
     flex-direction: column;
-    padding-top: 10rem;
+    margin-top: 11rem;
     padding-left: 3rem;
+    position: fixed;
+   
 }
 
 .sideBar-subContainer{
     display: flex;
     flex-direction: column;
+    background-color: white;
+    height: 100%;
 }
 
 
@@ -49,7 +53,7 @@ height: 18px;
 @media (max-width:900px) {
     .sideBar-container{
         padding-left: 1rem;
-        padding-top: 16em;
+        margin-top: 12rem;
     }
 
     .sideMenu-toggleBtn{
@@ -58,6 +62,8 @@ height: 18px;
     .sideBar-subContainerRes{
         display: flex;
         flex-direction: column;
+        background-color: white;
+        height: 100%;
     }
 
     .sideBar-subContainer{
@@ -65,3 +71,8 @@ height: 18px;
     }
 }
 
+@media (max-width:650px) {
+    .sideBar-container{
+        margin-top: 16rem;
+    }
+}
