--- a/client/src/Components/SubHeader/SubHeader.css
+++ b/client/src/Components/SubHeader/SubHeader.css
@@ -6,9 +6,11 @@
     width: 100%;
     height: 10rem;
     position: fixed;
+ 
 }
 
 .subHeader-pagenames{
+    background-color: white;
     display: flex;
     margin-left: 1.5rem;
 }
