--- a/client/src/Components/SignUp/SignUp.css
+++ b/client/src/Components/SignUp/SignUp.css
@@ -178,6 +178,18 @@ input[type="password"]{
 
 
 
+  .register-error-message{
+    color: red;
+    font-size: 12px;
+    padding-left: 2rem;
+}
+
+.registration-error{
+    color: red;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: fantasy;
+}
 
 
   @media (max-width:900px) {
