--- a/client/src/Components/SideBar/SideBar.css
+++ b/client/src/Components/SideBar/SideBar.css
@@ -1,11 +1,11 @@
 .sideBar-container{
     height: 100vh;
-    width: 19rem;
+    width: 18rem;
     display: flex;
     flex-direction: column;
     margin-top: 11rem;
     padding-left: 3rem;
- 
+    position: fixed;
 }
 
 .sideBar-subContainer{
@@ -26,9 +26,9 @@
 
 .sideBar-contents_menuItem{
     display: flex;
-    justify-content: space-between;
     padding-top: 1rem;
     padding-right: 1rem;
+    gap: 6rem;
 }
 
 .sideBar-contents_subMenuItem{
